--- a/Leonardo/Resources/layout/Game.axml
+++ b/Leonardo/Resources/layout/Game.axml
@@ -135,4 +135,19 @@
         android:id="@+id/imageButton17"
         android:layout_marginLeft="0.0dp"
         android:layout_gravity="center" />
+    <ImageButton
+        android:src="@android:drawable/ic_menu_gallery"
+        android:layout_width="0.0dp"
+        android:layout_height="0.0dp"
+        android:id="@+id/imageButton20" />
+    <ImageButton
+        android:src="@android:drawable/ic_menu_gallery"
+        android:layout_width="0.0dp"
+        android:layout_height="0.0dp"
+        android:id="@+id/imageButton18" />
+    <ImageButton
+        android:src="@android:drawable/ic_menu_gallery"
+        android:layout_width="0.0dp"
+        android:layout_height="0.0dp"
+        android:id="@+id/imageButton19" />
 </LinearLayout>
