--- a/Leonardo/Resources/layout/Main.axml
+++ b/Leonardo/Resources/layout/Main.axml
@@ -9,12 +9,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/imageView1" />
+    <AbsoluteLayout
+        android:minWidth="25px"
+        android:minHeight="25px"
+        android:layout_width="match_parent"
+        android:layout_height="155.7dp"
+        android:id="@+id/absoluteLayout1" />
     <ImageButton
         android:src="@drawable/play"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton1"
-        android:layout_gravity="right" />
+        android:layout_gravity="center"
+        android:layout_marginLeft="0.0dp" />
+    <AbsoluteLayout
+        android:minWidth="25px"
+        android:minHeight="25px"
+        android:layout_width="match_parent"
+        android:layout_height="136.8dp"
+        android:id="@+id/absoluteLayout2" />
     <Button
         android:text="Sign In"
         android:layout_width="match_parent"
