--- a/Leonardo/Resources/layout/SignIn.axml
+++ b/Leonardo/Resources/layout/SignIn.axml
@@ -18,7 +18,7 @@
         android:id="@+id/linearLayout1"
         android:layout_marginBottom="0.0dp">
         <TextView
-            android:text="   Name : "
+            android:text="   eMail : "
             android:layout_width="90.0dp"
             android:layout_height="wrap_content"
             android:id="@+id/textViewName"
