--- a/Leonardo/Resources/layout/SignIn.axml
+++ b/Leonardo/Resources/layout/SignIn.axml
@@ -58,7 +58,7 @@
         android:text="Sign In"
         android:layout_width="153.7dp"
         android:layout_height="wrap_content"
-        android:id="@+id/buttonSignIn"
+        android:id="@+id/signInBtn"
         android:layout_gravity="center" />
     <Button
         android:text="Facebook Log In"
