--- a/Leonardo/Resources/layout/Main.axml
+++ b/Leonardo/Resources/layout/Main.axml
@@ -5,47 +5,26 @@
     android:layout_height="fill_parent"
     android:background="@drawable/background">
     <ImageView
-        android:src="@drawable/logo"
+        android:src="@drawable/leonardo_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView1" />
-    <TextView
-        android:text="Unregistered"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#00ff00"
-        android:background="#000000"
-        android:id="@+id/textView1"
-        android:layout_gravity="right" />
+        android:id="@+id/imageView1"
+        android:backgroundTint="#d3d3d3ff" />
     <AbsoluteLayout
         android:minWidth="25px"
         android:minHeight="25px"
         android:layout_width="match_parent"
-        android:layout_height="143.5dp"
+        android:layout_height="127.0dp"
         android:id="@+id/absoluteLayout1" />
-    <ImageButton
-        android:src="@drawable/play"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageButton1"
-        android:layout_gravity="center"
-        android:layout_marginLeft="0.0dp" />
-    <AbsoluteLayout
-        android:minWidth="25px"
-        android:minHeight="25px"
-        android:layout_width="match_parent"
-        android:layout_height="53.4dp"
-        android:id="@+id/absoluteLayout2" />
     <Button
         android:text="Sign In"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="45.0dp"
         android:id="@+id/button1" />
     <Button
         android:text="Sign Up"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="45.0dp"
         android:id="@+id/button2" />
     <Button
         android:text="TOP 10"
