--- a/Leonardo/Resources/layout/TopScore.axml
+++ b/Leonardo/Resources/layout/TopScore.axml
@@ -10,6 +10,12 @@
         android:layout_height="fill_parent"
         android:minWidth="25px"
         android:minHeight="25px">
+        <Button
+            android:text="Where am I ?"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/buttonWhereAreU"
+            android:layout_gravity="center" />
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -22,20 +28,20 @@
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent">
                 <TextView
-                    android:id="@+id/TextView04"
-                    android:text="Row 1 column 1 Names"
+                    android:id="@+id/TextView1"
+                    android:text="Names"
                     android:layout_weight="1"
                     android:background="#dcdcdc"
                     android:textColor="#000000"
-                    android:padding="30dip"
+                    android:padding="10dip"
                     android:gravity="center" />
                 <TextView
-                    android:id="@+id/TextView04"
-                    android:text="Row 1 column 2 Scores"
+                    android:id="@+id/TextView2"
+                    android:text="Scores"
                     android:layout_weight="1"
                     android:background="#d3d3d3"
                     android:textColor="#000000"
-                    android:padding="30dip"
+                    android:padding="10dip"
                     android:gravity="center" />
             </TableRow>
         <!-- just draw a red line -->
@@ -48,198 +54,234 @@
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent">
                 <TextView
-                    android:id="@+id/TextView04"
-                    android:text="Row 2 column 1"
+                    android:id="@+id/TextView3"
+                    android:text=""
                     android:layout_weight="1"
                     android:background="#dcdcdc"
                     android:textColor="#000000"
                     android:padding="30dip"
                     android:gravity="center" />
                 <TextView
-                    android:id="@+id/TextView04"
-                    android:text="Row 2 column 2"
+                    android:id="@+id/TextView4"
+                    android:text=""
                     android:layout_weight="1"
                     android:background="#d3d3d3"
                     android:textColor="#000000"
                     android:padding="30dip"
                     android:gravity="center" />
             </TableRow>
+        <!-- just draw a  line -->
+            <View
+                android:layout_height="1dip"
+                android:background="#000000" />
         <!-- Row 3 with 2 columns -->
             <TableRow
                 android:id="@+id/tableRow3"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent">
                 <TextView
-                    android:id="@+id/TextView04"
-                    android:text="Row 3 column 1"
+                    android:id="@+id/TextView5"
+                    android:text=""
                     android:layout_weight="1"
                     android:background="#dcdcdc"
                     android:textColor="#000000"
                     android:padding="30dip"
                     android:gravity="center" />
                 <TextView
-                    android:id="@+id/TextView04"
-                    android:text="Row 3 column 2"
+                    android:id="@+id/TextView6"
+                    android:text=""
                     android:layout_weight="1"
                     android:background="#d3d3d3"
                     android:textColor="#000000"
                     android:padding="30dip"
                     android:gravity="center" />
             </TableRow>
+        <!-- just draw a  line -->
+            <View
+                android:layout_height="1dip"
+                android:background="#000000" />
         <!-- Row 4 with 2 columns -->
             <TableRow
                 android:id="@+id/tableRow4"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent">
                 <TextView
-                    android:id="@+id/TextView04"
-                    android:text="Row 4 column 1"
+                    android:id="@+id/TextView7"
+                    android:text=""
                     android:layout_weight="1"
                     android:background="#dcdcdc"
                     android:textColor="#000000"
                     android:padding="30dip"
                     android:gravity="center" />
                 <TextView
-                    android:id="@+id/TextView04"
-                    android:text="Row 4 column 2"
+                    android:id="@+id/TextView8"
+                    android:text=""
                     android:layout_weight="1"
                     android:background="#d3d3d3"
                     android:textColor="#000000"
                     android:padding="30dip"
                     android:gravity="center" />
             </TableRow>
+        <!-- just draw a  line -->
+            <View
+                android:layout_height="1dip"
+                android:background="#000000" />
         <!-- Row 5 with 2 columns -->
             <TableRow
                 android:id="@+id/tableRow5"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent">
                 <TextView
-                    android:id="@+id/TextView04"
-                    android:text="Row 5 column 1"
+                    android:id="@+id/TextView9"
+                    android:text=""
                     android:layout_weight="1"
                     android:background="#dcdcdc"
                     android:textColor="#000000"
                     android:padding="30dip"
                     android:gravity="center" />
                 <TextView
-                    android:id="@+id/TextView04"
-                    android:text="Row 5 column 2"
+                    android:id="@+id/TextView10"
+                    android:text=""
                     android:layout_weight="1"
                     android:background="#d3d3d3"
                     android:textColor="#000000"
                     android:padding="30dip"
                     android:gravity="center" />
             </TableRow>
+        <!-- just draw a  line -->
+            <View
+                android:layout_height="1dip"
+                android:background="#000000" />
         <!-- Row 6 with 2 columns -->
             <TableRow
                 android:id="@+id/tableRow6"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent">
                 <TextView
-                    android:id="@+id/TextView04"
-                    android:text="Row 6 column 1"
+                    android:id="@+id/TextView11"
+                    android:text=""
                     android:layout_weight="1"
                     android:background="#dcdcdc"
                     android:textColor="#000000"
                     android:padding="30dip"
                     android:gravity="center" />
                 <TextView
-                    android:id="@+id/TextView04"
-                    android:text="Row 6 column 2"
+                    android:id="@+id/TextView12"
+                    android:text=""
                     android:layout_weight="1"
                     android:background="#d3d3d3"
                     android:textColor="#000000"
                     android:padding="30dip"
                     android:gravity="center" />
             </TableRow>
+        <!-- just draw a  line -->
+            <View
+                android:layout_height="1dip"
+                android:background="#000000" />
         <!-- Row 7 with 2 columns -->
             <TableRow
                 android:id="@+id/tableRow7"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent">
                 <TextView
-                    android:id="@+id/TextView04"
-                    android:text="Row 7 column 1"
+                    android:id="@+id/TextView13"
+                    android:text=""
                     android:layout_weight="1"
                     android:background="#dcdcdc"
                     android:textColor="#000000"
                     android:padding="30dip"
                     android:gravity="center" />
                 <TextView
-                    android:id="@+id/TextView04"
-                    android:text="Row 7 column 2"
+                    android:id="@+id/TextView14"
+                    android:text=""
                     android:layout_weight="1"
                     android:background="#d3d3d3"
                     android:textColor="#000000"
                     android:padding="30dip"
                     android:gravity="center" />
             </TableRow>
+        <!-- just draw a  line -->
+            <View
+                android:layout_height="1dip"
+                android:background="#000000" />
         <!-- Row 8 with 2 columns -->
             <TableRow
                 android:id="@+id/tableRow8"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent">
                 <TextView
-                    android:id="@+id/TextView04"
-                    android:text="Row 8 column 1"
+                    android:id="@+id/TextView15"
+                    android:text=""
                     android:layout_weight="1"
                     android:background="#dcdcdc"
                     android:textColor="#000000"
                     android:padding="30dip"
                     android:gravity="center" />
                 <TextView
-                    android:id="@+id/TextView04"
-                    android:text="Row 8 column 2"
+                    android:id="@+id/TextView16"
+                    android:text=""
                     android:layout_weight="1"
                     android:background="#d3d3d3"
                     android:textColor="#000000"
                     android:padding="30dip"
                     android:gravity="center" />
             </TableRow>
+        <!-- just draw a  line -->
+            <View
+                android:layout_height="1dip"
+                android:background="#000000" />
         <!-- Row 9 with 2 columns -->
             <TableRow
                 android:id="@+id/tableRow9"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent">
                 <TextView
-                    android:id="@+id/TextView04"
-                    android:text="Row 9 column 1"
+                    android:id="@+id/TextView17"
+                    android:text=""
                     android:layout_weight="1"
                     android:background="#dcdcdc"
                     android:textColor="#000000"
                     android:padding="30dip"
                     android:gravity="center" />
                 <TextView
-                    android:id="@+id/TextView04"
-                    android:text="Row 9 column 2"
+                    android:id="@+id/TextView18"
+                    android:text=""
                     android:layout_weight="1"
                     android:background="#d3d3d3"
                     android:textColor="#000000"
                     android:padding="30dip"
                     android:gravity="center" />
             </TableRow>
+        <!-- just draw a  line -->
+            <View
+                android:layout_height="1dip"
+                android:background="#000000" />
         <!-- Row 10 with 2 columns -->
             <TableRow
                 android:id="@+id/tableRow10"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent">
                 <TextView
-                    android:id="@+id/TextView04"
-                    android:text="Row 10 column 1"
+                    android:id="@+id/TextView19"
+                    android:text=""
                     android:layout_weight="1"
                     android:background="#dcdcdc"
                     android:textColor="#000000"
                     android:padding="30dip"
                     android:gravity="center" />
                 <TextView
-                    android:id="@+id/TextView04"
-                    android:text="Row 10 column 2"
+                    android:id="@+id/TextView20"
+                    android:text=""
                     android:layout_weight="1"
                     android:background="#d3d3d3"
                     android:textColor="#000000"
                     android:padding="30dip"
                     android:gravity="center" />
             </TableRow>
+        <!-- just draw a  line -->
+            <View
+                android:layout_height="1dip"
+                android:background="#000000" />
         </TableLayout>
     </LinearLayout>
 </ScrollView>
