--- a/Leonardo/Resources/layout/Registered.axml
+++ b/Leonardo/Resources/layout/Registered.axml
@@ -14,15 +14,15 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#00ff00"
-        android:background="#000000"
-        android:id="@+id/textView1"
-        android:layout_gravity="right" />
+        android:textColor="#000000"
+        android:background="#ffffff"
+        android:id="@+id/registeredLabel"
+        android:layout_gravity="center" />
     <AbsoluteLayout
         android:minWidth="25px"
         android:minHeight="25px"
         android:layout_width="match_parent"
-        android:layout_height="127.3dp"
+        android:layout_height="119.7dp"
         android:id="@+id/absoluteLayout1" />
     <ImageButton
         android:src="@drawable/play"
@@ -36,6 +36,12 @@
         android:text="Sign Out"
         android:layout_width="match_parent"
         android:layout_height="54.5dp"
-        android:id="@+id/button1"
+        android:id="@+id/signOutBtn"
+        android:layout_gravity="center" />
+    <Button
+        android:text="How To Play"
+        android:layout_width="match_parent"
+        android:layout_height="54.5dp"
+        android:id="@+id/how2playBtn"
         android:layout_gravity="center" />
 </LinearLayout>
