--- a/Leonardo/Resources/layout/Game.axml
+++ b/Leonardo/Resources/layout/Game.axml
@@ -5,12 +5,6 @@
     android:layout_height="fill_parent"
     android:minWidth="25px"
     android:minHeight="25px">
-    <TextView
-        android:text="Game"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView1" />
     <TableLayout
         android:minWidth="25px"
         android:minHeight="25px"
@@ -135,13 +129,25 @@
         android:id="@+id/imageButton17"
         android:layout_marginLeft="0.0dp"
         android:layout_gravity="center" />
-    <TextView
-        android:text="0"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView3"
-        android:layout_gravity="center" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="25.4dp"
+        android:id="@+id/linearLayout1">
+        <TextView
+            android:text="Score : "
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_width="166.9dp"
+            android:layout_height="match_parent"
+            android:id="@+id/textView4" />
+        <TextView
+            android:text="0"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:id="@+id/scoreTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center" />
+    </LinearLayout>
     <ImageButton
         android:src="@android:drawable/ic_menu_gallery"
         android:layout_width="0.0dp"
@@ -157,4 +163,22 @@
         android:layout_width="0.0dp"
         android:layout_height="0.0dp"
         android:id="@+id/imageButton19" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="33.2dp"
+        android:id="@+id/linearLayout2">
+        <TextView
+            android:text="Cards : "
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_width="178.1dp"
+            android:layout_height="match_parent"
+            android:id="@+id/textView5" />
+        <TextView
+            android:text=" "
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/cardsLeftTextView" />
+    </LinearLayout>
 </LinearLayout>
