--- a/Leonardo/Resources/layout/Registered.axml
+++ b/Leonardo/Resources/layout/Registered.axml
@@ -28,7 +28,7 @@
         android:src="@drawable/play"
         android:layout_width="wrap_content"
         android:layout_height="80.4dp"
-        android:id="@+id/imageButton1"
+        android:id="@+id/playImgBtn"
         android:layout_gravity="center"
         android:layout_marginLeft="0.0dp"
         android:backgroundTintMode="screen" />
