--- a/Leonardo/Resources/layout/Game.axml
+++ b/Leonardo/Resources/layout/Game.axml
@@ -10,124 +10,22 @@
         android:minHeight="25px"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tableLayout1">
+        android:id="@+id/boardTable">
         <TableRow
-            android:id="@+id/tableRow1"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content">
-            <ImageButton
-                android:src="@android:drawable/ic_menu_gallery"
-                android:layout_column="0"
-                android:id="@+id/imageButton1"
-                android:layout_width="92.0dp"
-                android:layout_height="92.0dp" />
-            <ImageButton
-                android:src="@android:drawable/ic_menu_gallery"
-                android:layout_column="1"
-                android:id="@+id/imageButton2"
-                android:layout_width="92.0dp"
-                android:layout_height="92.0dp" />
-            <ImageButton
-                android:src="@android:drawable/ic_menu_gallery"
-                android:layout_column="2"
-                android:id="@+id/imageButton3"
-                android:layout_width="92.0dp"
-                android:layout_height="92.0dp" />
-            <ImageButton
-                android:src="@android:drawable/ic_menu_gallery"
-                android:layout_column="3"
-                android:id="@+id/imageButton4"
-                android:layout_width="92.0dp"
-                android:layout_height="92.0dp" />
+            android:id="@+id/tableRow5">
         </TableRow>
         <TableRow
-            android:id="@+id/tableRow2">
-            <ImageButton
-                android:src="@android:drawable/ic_menu_gallery"
-                android:layout_column="0"
-                android:id="@+id/imageButton5"
-                android:layout_width="92.0dp"
-                android:layout_height="92.0dp" />
-            <ImageButton
-                android:src="@android:drawable/ic_menu_gallery"
-                android:layout_column="1"
-                android:id="@+id/imageButton6"
-                android:layout_width="92.0dp"
-                android:layout_height="92.0dp" />
-            <ImageButton
-                android:src="@android:drawable/ic_menu_gallery"
-                android:layout_column="2"
-                android:id="@+id/imageButton7"
-                android:layout_width="92.0dp"
-                android:layout_height="92.0dp" />
-            <ImageButton
-                android:src="@android:drawable/ic_menu_gallery"
-                android:layout_column="3"
-                android:id="@+id/imageButton8"
-                android:layout_width="92.0dp"
-                android:layout_height="92.0dp" />
+            android:id="@+id/tableRow6">
         </TableRow>
         <TableRow
-            android:id="@+id/tableRow3">
-            <ImageButton
-                android:src="@android:drawable/ic_menu_gallery"
-                android:layout_column="0"
-                android:id="@+id/imageButton9"
-                android:layout_width="92.0dp"
-                android:layout_height="92.0dp" />
-            <ImageButton
-                android:src="@android:drawable/ic_menu_gallery"
-                android:layout_column="1"
-                android:id="@+id/imageButton10"
-                android:layout_width="92.0dp"
-                android:layout_height="92.0dp" />
-            <ImageButton
-                android:src="@android:drawable/ic_menu_gallery"
-                android:layout_column="2"
-                android:id="@+id/imageButton11"
-                android:layout_width="92.0dp"
-                android:layout_height="92.0dp" />
-            <ImageButton
-                android:src="@android:drawable/ic_menu_gallery"
-                android:layout_column="3"
-                android:id="@+id/imageButton12"
-                android:layout_width="92.0dp"
-                android:layout_height="92.0dp" />
-        </TableRow>
-        <TableRow
-            android:id="@+id/tableRow4">
-            <ImageButton
-                android:src="@android:drawable/ic_menu_gallery"
-                android:layout_column="0"
-                android:id="@+id/imageButton13"
-                android:layout_width="92.0dp"
-                android:layout_height="92.0dp" />
-            <ImageButton
-                android:src="@android:drawable/ic_menu_gallery"
-                android:layout_column="1"
-                android:id="@+id/imageButton14"
-                android:layout_width="92.0dp"
-                android:layout_height="92.0dp" />
-            <ImageButton
-                android:src="@android:drawable/ic_menu_gallery"
-                android:layout_column="2"
-                android:id="@+id/imageButton15"
-                android:layout_width="92.0dp"
-                android:layout_height="92.0dp" />
-            <ImageButton
-                android:src="@android:drawable/ic_menu_gallery"
-                android:layout_column="3"
-                android:id="@+id/imageButton16"
-                android:layout_width="92.0dp"
-                android:layout_height="92.0dp" />
+            android:id="@+id/tableRow7">
         </TableRow>
     </TableLayout>
     <ImageButton
         android:src="@android:drawable/ic_menu_gallery"
-        android:layout_width="92.0dp"
-        android:layout_height="92.0dp"
-        android:id="@+id/imageButton17"
-        android:layout_marginLeft="0.0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/outerImgBtn"
         android:layout_gravity="center" />
     <LinearLayout
         android:orientation="horizontal"
@@ -148,21 +46,6 @@
             android:layout_height="match_parent"
             android:layout_gravity="center" />
     </LinearLayout>
-    <ImageButton
-        android:src="@android:drawable/ic_menu_gallery"
-        android:layout_width="0.0dp"
-        android:layout_height="0.0dp"
-        android:id="@+id/imageButton20" />
-    <ImageButton
-        android:src="@android:drawable/ic_menu_gallery"
-        android:layout_width="0.0dp"
-        android:layout_height="0.0dp"
-        android:id="@+id/imageButton18" />
-    <ImageButton
-        android:src="@android:drawable/ic_menu_gallery"
-        android:layout_width="0.0dp"
-        android:layout_height="0.0dp"
-        android:id="@+id/imageButton19" />
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
